--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -1,10 +1,10 @@
-<div flex layout="column" style="min-width: 1000px; min-height: 600px" class="unselectable" ng-controller="SubArrayResourcesCtrl as vm"
+<div flex layout="column" style="min-width: 1150px; min-height: 600px" class="unselectable" ng-controller="SubArrayResourcesCtrl as vm"
     ng-mouseup="vm.dragSelect = false">
     <div flex layout="row">
         <div flex layout="column" style="padding: 0 8px">
             <div class="subarray-container" layout="row" style="min-width: 450px; position: relative" flex ng-class="{'maintenance-bg': vm.subarray.maintenance}">
-                <div class="resource-counter-overlay" title="The total of resources assigned to this subarray">
-                    {{vm.subarray.allocations.length}}
+                <div class="resource-counter-overlay" title="The number of receptors assigned to this subarray">
+                    {{parent.vm.getTotalReceptorsInSubarray()}}
                 </div>
                 <div flex class="md-whiteframe-z2" layout="column">
                     <md-toolbar md-theme="{{vm.subarray.state === 'inactive'? 'grey' : vm.subarray.state === 'active'? 'green' : vm.subarray.state === 'error'? 'amber' : 'deep-purple'}}"
@@ -32,8 +32,8 @@
 
                         <span flex></span>
 
-                        <md-menu style="margin: 0 8px; padding: 0; position: relative">
-                            <span md-ink-ripple style="margin: 0; padding: 0px" ng-click="$mdMenu.open($event)" class="opaque-hover">
+                        <md-menu style="margin: 0 8px; padding: 0; position: relative" class="subarray-mode-button">
+                            <span md-ink-ripple style="margin: 0; padding: 0px" ng-click="$mdMenu.open($event)">
                                 <span class="fa fa-chevron-down subarray-select-chevron" style="top: 7px"></span>
                                 <span style="margin-left: 16px">MODE: <b>{{vm.subarray.mode}}</b></span> </span>
                             </span>
@@ -44,13 +44,18 @@
                             </md-menu-content>
                         </md-menu>
 
+                        <span class="fa fa-cubes subarray-action-icon hover-opacity"
+                            title="Load last known subarray configuration - {{vm.lastKnownSubarrayConfig? vm.lastKnownSubarrayConfig : 'Could not find the last known configuration for any subarrays'}}"
+                            md-ink-ripple ng-show="parent.vm.iAmAtLeastCA()"
+                            ng-disabled="!vm.lastKnownSubarrayConfig || vm.subarray.state !== 'inactive'"
+                            ng-click="(!parent.vm.iAmAtLeastCA() && (!vm.lastKnownSubarrayConfig || vm.subarray.state !== 'inactive')) || vm.loadLastKnownSubarrayConfig()"></span>
                         <span class="fa fa-power-off subarray-action-icon hover-opacity" md-ink-ripple ng-show="$root.expertOrLO && vm.subarray.state === 'inactive'"
                             title="Activate Subarray" ng-click="parent.vm.activateSubarray()"></span>
                         <span class="fa fa-recycle subarray-action-icon hover-opacity" md-ink-ripple ng-show="parent.vm.iAmAtLeastCA()"
                             title="Free Subarray" ng-click="parent.vm.freeSubarray()"></span>
 
                         <md-menu ng-show="$root.expertOrLO" md-theme="{{themePrimary}}">
-                            <md-button style="padding: 0; font-size: 24px" class="md-icon-button inline-action-button hover-opacity"
+                            <md-button style="padding: 0; margin: 4px   ; font-size: 24px" class="md-icon-button inline-action-button hover-opacity"
                                 ng-click="vm.initLastKnownConfig(); $mdMenu.open($event)">
                                 <span class="fa fa-ellipsis-v"></span>
                             </md-button>
@@ -113,10 +118,11 @@
                     </md-toolbar>
 
                     <div flex layout="column" layout-wrap style="overflow-y: auto">
-                        <div style="max-height: 80px" flex="25" class="resource-item" layout="row" layout-align="start center"
-                            ng-repeat="resource in vm.subarray.allocations | orderBy:'name'" ng-class="{'maintenance-bg-hover': parent.vm.isResourceInMaintenance(resource), 'faulty-border': parent.vm.isResourceFaulty(resource)}">
-                            <span flex style="font-size: 18px; margin-left: 4px" ng-class="{'error-text':resource.state === 'faulty', 'maintenance-text':resource.maintenance}">{{resource.name}}</span>
-                            <div flex layout="column" layout-wrap style="max-height: 100%; max-width: 200px; min-width: 150px; overflow: auto">
+                        <div style="max-height: 52px; position: relative" flex="25" class="resource-item" layout="row" layout-align="start center"
+                            ng-repeat="resource in vm.subarray.allocations | orderBy:'name'" ng-class="parent.vm.classForResource(resource)">
+                            <span flex style="font-size: 18px; margin-left: 4px; margin-bottom: 12px" class="resource-name-text">{{resource.name}}</span>
+                            <span style="position: absolute; left: 8px; bottom: 4px; font-size: 12px">{{parent.vm.resourcesStates[resource.name].value}}</span>
+                            <div flex layout="column" layout-wrap class="gui-urls-link-container">
                                 <a ng-repeat="link in parent.vm.guiUrls[resource.name].value track by $index" href="{{link.href}}" title="{{link.description}}" style="padding: 0">{{link.title}}</a>
                             </div>
                             <span class="icon-button fa fa-refresh" ng-disabled="!$root.expertOrLO" md-ink-ripple ng-show="resource.maintenance && vm.subarray.maintenance"
@@ -155,7 +161,7 @@
                         ng-model="vm.q" placeholder="Search Resources..." />
                 </md-toolbar>
                 <div flex style="overflow: auto" layout="column" layout-wrap>
-                    <div style="max-height: 80px; position: relative; cursor: pointer" flex="25" class="resource-item" layout="row"
+                    <div style="max-height: 40px; position: relative; cursor: pointer" flex="25" class="resource-item" layout="row"
                         layout-align="start center" ng-repeat="resource in filteredResources = (vm.poolResourcesFree | regexSearch:[{label:'name', value:'name'}]:vm.q | orderBy:'name')"
                         ng-class="{'selected-resource-item': resource.selected, 'maintenance-bg-hover': parent.vm.isResourceInMaintenance(resource), 'faulty-border': parent.vm.isResourceFaulty(resource)}"
                         ng-disabled="!$root.expertOrLO" ng-mousedown="vm.dragSelect = true; vm.dragSelectUnselect = resource.selected; vm.toggleResourceSelect(resource)"
@@ -174,5 +180,4 @@
             </div>
         </div>
     </div>
-
 </div>
