--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="images/favicon.ico" sizes="32x32">
     <link href="app/app.less" type="text/css" rel="stylesheet/less">
-    <script>
+    <script data-remove="exclude">
         //backwards compatibility to allow for linking with the old #/ in the url
         // with html5 mode the angular hashbang is removed
         if (window.location.href.indexOf('#/') > -1) {
